# cudmd

./: .gitignore  CMakeLists.txt  Makefile  common.h  cudmd.cu  cudmd.h  image_processing.ipynb  install.sh  main.cu  main.ipynb  mathematical_physics.ipynb  requirements.txt  types.h  video_processing.ipynb
include/cudmd/: cublas_helpers.h  cudmd.h  cusolverDn_helpers.h  cusolver_helpers.h  error_handling.h  handle.h  types.h
notebooks/: heat_equation.ipynb  image_processing.ipynb  mathematical_physics.ipynb  requirements.txt  splitting_method.ipynb  static_system.ipynb  thomas.ipynb
src/: CMakeLists.txt  cudmd.cu  main.cu
test/: CMakeLists.txt  cudmd.test.cu
